--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form class="form-inline">
             <div class="form-group">
                 <label for="url">URL</label>
-                <input type="text" class="form-control" id="url" placeholder="Enter a URL">
+                <input type="text" class="form-control" style="max-width: 30em;" id="url" placeholder="Enter a URL">
             </div>
             <div class="form-group">
                 http://
