adjust page layout

--- a/index.html
+++ b/index.html
@@ -9,24 +9,60 @@
         </script>
         <script src="src/index.js"></script>
     </head>
-    <body class="container">
-        <form class="form-inline">
-            <div class="form-group">
-                <label for="url">URL</label>
-                <input type="text" class="form-control" style="max-width: 30em;" id="url" placeholder="Enter a URL">
-            </div>
-            <div class="form-group">
-                http://
-                <input type="text" class="form-control" style="max-width: 8em;" id="proxyUser" placeholder="user name">
-                :
-                <input type="password" class="form-control" style="max-width: 8em;" id="proxyPassword" placeholder="password">
-                @
-                <input type="text" class="form-control" style="max-width: 20em;" id="proxyHost" placeholder="host">
-                :
-                <input type="text" class="form-control" style="max-width: 5em;" id="proxyPort" placeholder="port">
-                /
-            </div>
-        </form>
-        <button type="button" class="btn btn-primary" onclick="download();">Get It!</button>
+    <body class="container-fluid">
+        <header class="text-center">
+            <h2>Get Executables</h2>
+            <h3>via proxy</h3>
+        </header>
+        <hr/>
+        <section class="row">
+            <form class="form-horizontal col-xs-10 col-xs-offset-1">
+                <fieldset>
+                    <div class="form-group">
+                        <label for="url" class="col-xs-3 control-label">URL</label>
+                        <div class="col-xs-9">
+                            <input type="text" class="form-control" id="url" placeholder="What to download?">
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="form-group">
+                        <label for="proxyHost" class="col-xs-3 control-label">Proxy Host</label>
+                        <div class="col-xs-5">
+                            <input type="text" class="form-control" id="proxyHost" placeholder="host">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="proxyPort" class="col-xs-3 control-label">Proxy Port</label>
+                        <div class="col-xs-2">
+                            <input type="text" class="form-control" id="proxyPort" placeholder="port">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="proxyUser" class="col-xs-3 control-label">User Name</label>
+                        <div class="col-xs-3">
+                            <input type="text" class="form-control" id="proxyUser" placeholder="user name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="proxyPassword" class="col-xs-3 control-label">Password</label>
+                        <div class="col-xs-3">
+                            <input type="password" class="form-control" id="proxyPassword" placeholder="password">
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="form-group">
+                        <label class="col-xs-3 control-label"></label>
+                        <div class="col-xs-2">
+                            <button type="button" class="btn btn-primary" onclick="download();">Download</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </section>
+        <footer class="navbar-fixed-bottom text-center">
+          Built by Parker with 85°C Coffee
+        </footer>
     </body>
 </html>
