--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     </div>
                 </fieldset>
                 <fieldset>
-                    <div class="form-group">
+                    <div class="form-group" role="group">
                         <label class="col-xs-3 control-label"></label>
-                        <div class="col-xs-2">
+                        <div class="col-xs-2 btn-group">
                             <button type="button" class="btn btn-primary" onclick="download();">Download</button>
                         </div>
                     </div>
@@ -64,5 +64,8 @@
         <footer class="navbar-fixed-bottom text-center">
           Built by Parker with 85°C Coffee
         </footer>
+        <script>
+            loadConfig();
+        </script>
     </body>
 </html>
