enable build with gulp.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Get Executables</title>
-  <link href="node_modules/angular-material/angular-material.css" rel="stylesheet"/>
+  <link href="../node_modules/angular-material/angular-material.css" rel="stylesheet"/>
 </head>
 <body ng-app="App" layout="column">
-<script src="src/index.js"></script>
+<script src="index.js"></script>
 <md-toolbar layout="row" layout-align="center center">
   <h3>╭∩╮（︶︿︶）╭∩╮</h3>
 </md-toolbar>
